# heimdal

./: .gitignore  .travis.yml  CLAUDE-nico.md  CLAUDE.md  GSS-s2n-heimdal.md  Makefile.am  NEWS  NTMakefile  PLAN.md  README.md  TODO  appveyor.yml  configure.ac
appl/gssmask/: Makefile.am  common.c  common.h  gssmaestro.c  gssmask.c
appl/kf/: Makefile.am
kpasswd/: Makefile.am  kpasswd.c  kpasswd_locl.h  kpasswdd.c
kuser/: Makefile.am  NTMakefile  copy_cred_cache.c  heimtools-commands.in  kcpytkt.c  kdeltkt.c  kdestroy.c  kdigest.c  kgetcred.c  kinit.c  klist.c  kswitch.c  kuser_locl.h  kx509.1  kx509.c
lib/: Makefile.am  NTMakefile
lib/asn1/: MANUAL.md  Makefile.am  NTMakefile  PLAN-revamp.md  README-JER.md  README-X681.md  README-template.md  README.md  asn1-common.h  asn1-template.h  asn1_print.c  asn1parse.y  check-der.c  check-gen.c  cms.asn1  der_get.c  der_length.c  der_print.c  der_put.c  extra.c  gen.c  gen_copy.c  gen_decode.c  gen_encode.c  gen_free.c  gen_length.c  gen_locl.h  gen_print.c  gen_template.c  krb5.asn1  krb5.opt  lex.l  libasn1-exports.def  main.c  oid_resolution.c  pkcs12.asn1  pkinit.asn1  pkinit.opt  rfc2459.asn1  symbol.c  (+6 more)
lib/asn1/data/: test_ios_cert.der  test_ios_cert.json
lib/base/: FUZZING.md  Makefile.am  NTMakefile  array.c  baselocl.h  bool.c  compile_fmt.c  config_file.c  config_reg.c  context.c  data.c  db.c  dict.c  dll.c  error.c  expand_path.c  fuzz_json.c  heimbase-atomics.h  heimbase.c  heimbase.h  heimbasepriv.h  json.c  log.c  null.c  number.c  plugin.c  roken_rename.h  string.c  test_base.c  version-script.map
lib/base/fuzz_json_corpus/: deep_nested.json  escape_chars.json  invalid_utf8.json  jwt_aud_array.json  jwt_claims.json  mixed.json  nested_object.json  newlines.json  null_in_key.json  space_key.json  unicode_escape.json  whitespace.json
lib/com_err/: com_right.h
lib/gss_preauth/: Makefile.am  pa_common.c
lib/gssapi/: Makefile.am  NTMakefile  gss-token.c  gss.1  gss.c  gssapi_mech.h  gsstool.c  libgssapi-exports.def  test_add_store_cred.c  test_call_context.c  test_context.c  test_name_attrs.c  test_names.c  version-script.map
lib/gssapi/gssapi/: gssapi.h  gssapi_krb5.h
lib/gssapi/jwt/: accept_sec_context.c  cred.c  external.c  init_sec_context.c  jwt-private.h  jwt_locl.h  sts.c  stubs.c
lib/gssapi/krb5/: accept_sec_context.c  acquire_cred.c  add_cred.c  arcfour.c  authorize_localname.c  canonicalize_name.c  compare_name.c  compat.c  creds.c  delete_sec_context.c  display_name.c  duplicate_name.c  export_name.c  export_sec_context.c  external.c  get_mic.c  gsskrb5_locl.h  import_name.c  import_sec_context.c  init_sec_context.c  inquire_context.c  inquire_cred.c  name.c  name_attrs.c  pname_to_uid.c  release_buffer.c  release_name.c  store_cred.c  (+3 more)
lib/hcrypto/: Makefile.am  NTMakefile  bn.h  evp-openssl.c  evp-openssl.h  evp.c  evp.h  mdtest.c  rand-timer.c  test_cipher.c
lib/hdb/: Makefile.am  NTMakefile  common.c  data-mkey.mit.aes256.be  data-mkey.mit.aes256.le  db.c  db3.c  dbinfo.c  ext.c  hdb-ldap.c  hdb-mdb.c  hdb-mitdb.c  hdb-sqlite-schema.sql  hdb-sqlite-statements.sqls  hdb-sqlite.c  hdb.asn1  hdb.c  hdb.h  hdb.opt  hdb_err.et  hdb_keytab_plugin.c  keys.c  keytab.c  libhdb-exports.def  mkey.c  ndbm.c  print.c  test_concurrency.c  test_namespace.c  version-script.map
lib/heimdal/: NTMakefile
lib/hx509/: FUZZING.md  Makefile.am  NTMakefile  ca.c  cert.c  cms.c  crypto-ec.c  crypto.c  error.c  fuzz_jose.c  hx_locl.h  hxtool-commands.in  hxtool.1  hxtool.c  jose.c  ks_dir.c  ks_file.c  ks_keychain.c  ks_p11.c  ks_p12.c  libhx509-exports.def  lock.c  name.c  print.c  req.c  revoke.c  sel-gram.y  softp11.c  test_ca.in  test_cert.in  test_chain.in  test_cms.in  test_crypto.in  test_nist.in  test_nist2.in  test_nist_cert.in  test_nist_pkcs12.in  test_pkcs12_pbes2.in  test_req.in  test_windows.in  (+1 more)
lib/ipc/: client.c  hi_locl.h  server.c
lib/kadm5/: Makefile.am  admin.h  chpass_s.c  common_glue.c  context_s.c  create_s.c  delete_s.c  destroy_s.c  ent_setup.c  get_s.c  init_c.c  init_s.c  iprop-commands.in  iprop-log.8  iprop-log.c  iprop.h  ipropd_common.c  ipropd_master.c  ipropd_slave.c  kadm5_err.et  kadm5_locl.h  libkadm5srv-exports.def  log.c  marshall.c  modify_s.c  private.h  prune_s.c  randkey_c.c  randkey_s.c  rename_s.c  set_keys.c  setkey3_s.c  version-script.map
lib/kafs/: Makefile.am  rxkad_kdf.c
lib/krb5/: Makefile.am  NTMakefile  acache.c  addr_families.c  aes-test.c  aname_to_localname.c  build_auth.c  cache.c  changepw.c  config_file.c  config_reg.c  context.c  creds.c  crypto-aes-sha1.c  crypto-aes-sha2.c  crypto-algs.c  crypto-arcfour.c  crypto-des-common.c  crypto-des.c  crypto-des3.c  crypto-evp.c  crypto-null.c  crypto-pk.c  crypto-stubs.c  crypto.c  crypto.h  curve25519_pace.c  data.c  dcache.c  deprecated.c  derived-key-test.c  eai_to_heim_errno.c  enomem.c  error_string.c  expand_path.c  fast.c  fcache.c  get_cred.c  get_default_realm.c  get_for_creds.c  (+51 more)
lib/ntlm/: Makefile.am  ntlm.c
lib/pace/: pace.asn1
lib/roken/: Makefile.am  NTMakefile  base64.c  base64.h  ct.c  daemon.c  detach.c  dlfcn.c  dlfcn.hin  dlfcn_w32.c  ecalloc.c  flock.c  gai_strerror.c  getarg.c  getdelim.c  getegid.c  geteuid.c  getgid.c  getipnodebyname.c  getline.c  getuid.c  getuserinfo.c  issuid.c  mini_inetd.c  ndbm_wrap.c  parse_time-test.c  pread.c  recvmsg.c  resolve-test.c  resolve.c  roken-common.h  roken.h.in  simple_exec.c  simple_exec_w32.c  socket_wrapper.c  stdint.hin  strerror_r.c  strtoll.c  strtoull.c  syslog.hin  (+6 more)
lib/sl/: sl.c  sl.h  sl_locl.h  slc-gram.y
lib/sqlite/: Makefile.am  NTMakefile  gen-sqlite3-namespace.sh  sqlite3.h  sqlite3_namespace.h
lib/wind/: idn-lookup.c
tests/csr_authorizer/: Makefile.am  NTMakefile  ipc_csr_authorizer.c  simple_csr_authorizer.c
tests/gss/: Makefile.am  check-basic.in  check-context.in  check-gss.in  check-gssmask.in  check-negoex.in  check-nodns.in  check-spnego.in  check-tls.in  krb5.conf.in
tests/token/: Makefile.am  NTMakefile  cjwt_token_validator.c  negotiate_token_validator.c  stub_token_validator.c  token_validator.c
(+281 files in other folders)
