include $(top_srcdir)/Makefile.am.common

lib_LTLIBRARIES = simple_csr_authorizer.la ipc_csr_authorizer.la
simple_csr_authorizer_la_SOURCES = simple_csr_authorizer.c
simple_csr_authorizer_la_LDFLAGS = -module
ipc_csr_authorizer_la_SOURCES = ipc_csr_authorizer.c
ipc_csr_authorizer_la_LDFLAGS = -module

CLEANFILES= 
EXTRA_DIST= NTMakefile
